# jupyter-notebook-example

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebook-example/: data-analysis.ipynb  notebook-example.ipynb  notebook-example.py  notebook-intro.ipynb  notebook-intro.py  notebook-tips.ipynb  presentation.ipynb
notebook-example/data/: nz_location_populations.csv  nz_location_populations_by_dhb.csv  stolen_vehicles.csv  vehicle_categories.csv
notebook-example/util/: datamorph_example.py
