[tool.poetry]
name = "python-nz-presentation"
version = "0.1.0"
description = ""
authors = ["Alex Luneburg"]
readme = "README.md"
packages = [
    { include = "notebook-example" }
]

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.2"
numpy = "^2.0"
matplotlib = "^3.9"
jupyter = "^1.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
data-morph-ai = "^0.2.0"

[tool.poetry.group.dev.dependencies]
jupytext = "^1.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
